Created team page and worked on home

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -38,7 +38,7 @@ img {
     justify-content:end;
 }
 
-ul {
+footer-panel-list {
     list-style-type: none;
     margin: 0;
     padding: 0.5rem 2rem;
