--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,6 +12,7 @@
     font-family: "Univers", "Helvetica", "sans-serif";
     font-size: 1.1rem;
     font-weight: 400;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
 
 
