--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,18 +8,14 @@
     left:0;
     width: 100%;
     padding:20px;
-    background-color: white;
+    background-color: #dfeef3;
     font-family: "Univers", "Helvetica", "sans-serif";
     font-size: 1.1rem;
     font-weight: 400;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1); */
 }
 
 
-.logo {
-    width: 100%;
-    height: 60px;
-}
 
 .nav-two {
     width: 240px;
@@ -40,8 +36,10 @@
     margin-top: 14px;
 }
 
-.nav-link {
+.nav-link-wide {
     margin:30px 20px 20px 20px;
 }
 
-  
+.nav-dropdown-btn-wide {
+    padding: 0.5em 0 0 0;
+}
