Changes to CE website

--- a/src/routes/styles/team.css
+++ b/src/routes/styles/team.css
@@ -5,7 +5,7 @@
 }
 
 .team-intro {
-    background-color: #e9ecef;
+    background-color: #dfeef3;
     padding:6rem 6rem 6rem 4rem;
     display:flex;
 }
