--- a/src/routes/styles/home.css
+++ b/src/routes/styles/home.css
@@ -13,10 +13,11 @@
 
 .vision-statement h4 {
 
-    font-weight: 300;
+    font-family: BradfordLLWeb-Light, Garamond, serif;
+    font-weight: 400;
     font-style: normal;
-    font-size: 2.2rem;
-    line-height: 3rem;
+    font-size: 3rem;
+    line-height: 3.8rem;
     letter-spacing: -0.02em;
     text-align: left;
 }
@@ -39,47 +40,97 @@
 }
 
 .next-fund {
-    padding:4rem 0rem;
+    padding:4rem 0rem 0rem 0rem;
+    
 }
 
 .next-fund-title {
     color:white;
     background:rgba(0,0,56,255);
-    padding:2rem;
+    padding:2.4rem 10rem 2rem 10rem;
 }
 
 .next-fund-title h4 {
-    margin:0px;
-    font-size:40px;
-    font-weight: 500;
+    font-family: "Univers", "Helvetica", "sans-serif";
+    font-size: 1.8rem;
+    font-weight: 300;
 }
 
 .next-fund-body {
     display:flex;
     flex-direction:row;
+    justify-content: space-evenly;
     border-top:2px black solid;
-    background-color: #a7c6eb;
+    background-color: white;
+    padding: 0rem;
 }
+
+.next-fund-list-wrapper {
+    padding: 3rem 10rem;
+    background-color:white;
+}
+
+.next-fund-list-wrapper h4 {
+    font-family: "Univers", "Helvetica", "sans-serif";
+    font-size: 2rem;
+    font-weight: 300;
+    text-align:left;
+}
+
+.next-fund-list {
+    list-style: none;
+}
+
+.next-fund-list li {
+    font-family: "Univers", "Helvetica", "sans-serif";
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-align:left;
+}
+
+.next-fund-list li:before {
+    content: '✓ ';
+    color:green;
+  }
 
 .founders-segment {
     width:50%;
-    padding: 3rem;
+    padding: 1.2rem 1rem 1rem 1rem;
     text-align:left;
-    border-right:1px black solid;
+    border:1px rgba(0,0,56,255) solid;
+    border-right: none;
+    background-color:#F0F0F0;
+    border-radius:0;
 }
 
 
 .non-active-segment {
     width: 50%;
-    padding: 3rem;
+    padding: 1.2rem 1rem 1rem 1rem;
     text-align:left;
-    border-right:1px black solid;
+    border:1px rgba(0,0,56,255) solid;
+    background-color:#F0F0F0;
+    border-radius:0;
+}
+
+.non-active-segment h3, .founders-segment h3 {
+    font-family: "Univers", "Helvetica", "sans-serif";
+    font-size: 2rem;
+    font-weight: 300;
+    text-align:center;
 }
 
 
 .success-stories-footer {
-    padding:2rem 10rem 0rem 10rem;
-    text-align:left;
+    padding:2rem 20rem 0rem 10rem;
+    text-align: left;
+}
+
+.success-stories-footer h4 {
+    font-family: "Univers", "Helvetica", "sans-serif";
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 2.8rem;
 }
 
 
@@ -108,4 +159,12 @@
 
 .success-col {
     padding:0rem 0.3rem;
+}
+
+.philosophy-button {
+    color: #212529;
+    border: 1px solid rgba(0,0,56,255);
+    border-radius:30px;
+    padding:15px 30px;
+    font-size:14px;
 }
