--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
     left:0;
     width: 100%;
     padding:20px;
-    background-color: #dfeef3;
+    /* background-color: #dfeef3; */
     font-family: "Univers", "Helvetica", "sans-serif";
     font-size: 1.1rem;
     font-weight: 400;
