--- a/src/routes/styles/home.css
+++ b/src/routes/styles/home.css
@@ -3,7 +3,7 @@
     border-radius: .3rem;
     min-height:100vh;
     font-family: Space Grotesk, sans-serif;
-    background-color: #dfeef3;
+    /* background-color: #dfeef3; */
 }
 
 .vision-statement {
@@ -67,7 +67,7 @@
 
 .next-fund-list-wrapper {
     padding: 3rem 10rem;
-    background-color:white;
+    background-color:#F0F0F0;
 }
 
 .next-fund-list-wrapper h4 {
@@ -122,7 +122,7 @@
 
 
 .success-stories-footer {
-    padding:2rem 20rem 0rem 10rem;
+    padding:0rem 20rem 0rem 10rem;
     text-align: left;
 }
 
@@ -146,7 +146,7 @@
 .success-card-body {
     text-align:left;
     font-family: Space Grotesk, sans-serif;
-    background-color: #dfeef3;
+    /* background-color: #dfeef3; */
 }
 
 .success-card-name {
@@ -167,4 +167,41 @@
     border-radius:30px;
     padding:15px 30px;
     font-size:14px;
+}
+
+
+
+
+
+.mechanism {
+    padding:10rem 0 5rem 0;
+}
+
+.mechanism h2 {
+    margin:0 0 6rem 0;
+    font-size:48px;
+    font-weight:500;
+}
+
+.mechanism-card {
+    width:100%;
+    border: none;
+    align-items: center;
+}
+
+.mechanism-card-body {
+    padding:2rem;
+}
+
+.mechanism-card-img {
+    height:80px;
+    width:max-content;
+}
+
+.mechanism-card-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 20px;
+    font-weight:600;
+    line-height: 39px;
 }
