--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,22 @@
   text-align: center;
 }
 
+.everythingWrapper {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
