--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
     width: 100%;
     padding:20px;
     /* background-color: #dfeef3; */
-    font-family: "Univers", "Helvetica", "sans-serif";
+    font-family: 'Poppins';
     font-size: 1.1rem;
     font-weight: 400;
     /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1); */
@@ -75,4 +75,33 @@
 
 .fa-magnifying-glass {
     color:black;
+}
+
+.dropdown-menu {
+    position:fixed!important;
+    top: 0 !important;
+    right: 0 !important;
+    left: 70% !important;
+    height:100vh !important;
+    margin:0 !important;
+    border: none;
+    background-color: white;
+    padding-top: 11rem;
+    text-align:center;
+}
+
+#nav-overlay-mask {
+    position:fixed;
+    top: 0;
+    width:70%;
+    left: 0;
+    height:100vh;
+    margin:0;
+    background-color: rgb(0, 0, 0, 0.4);
+    /* display:none; */
+}
+
+.dropdown-menu a {
+    font-family: 'Poppins';
+    font-size:24px !important;
 }
