--- a/src/routes/styles/about.css
+++ b/src/routes/styles/about.css
@@ -59,7 +59,7 @@
 .redefining-secondaries-quote {
     padding:6rem;
     text-align:left;
-    background-color:#F0F0F0;
+    background-color:#f1f6ff;
     color:black;
 }
 
