--- a/src/routes/styles/home.css
+++ b/src/routes/styles/home.css
@@ -2,24 +2,25 @@
     padding: 0rem;
     border-radius: .3rem;
     min-height:100vh;
-    font-family: Space Grotesk, sans-serif;
-    /* background-color: #dfeef3; */
+    font-family: 'Poppins';
+    /* background-color: #a2efed; */
 }
 
 .vision-statement {
-    padding: 2rem 10rem 0rem 10rem;
+    padding: 2rem 10rem 1.5rem 10rem;
     margin: 0;
-    /* background-color: #dfeef3; */
+    background-color: #f1f6ff;
+    color:#101045;
 }
 
 .vision-statement h4 {
 
-    font-family: BradfordLLWeb-Light, Garamond, serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: 'Poppins';
+    font-weight:500;
     font-size: 3rem;
     line-height: 3.8rem;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.01rem;
+    margin:0;
     text-align: left;
 }
 
@@ -27,28 +28,67 @@
     display: flex;
     flex-wrap: nowrap; 
     overflow: auto;
-    background-color: #dfeef3;
-    padding: 1rem;
+    background-color: #101045;
+    padding: 1.2rem 2rem 1rem 2rem;
+    border-top: 2px white solid;
+    border-bottom: 2px white solid;
 }
 
 .vision-banner h4 {
     flex: 0 0 auto;
-    font-family: BradfordLLWeb-Light, Garamond, serif;
-    font-weight: 400;
+    font-family: 'Poppins';
+    font-weight: 300;
     font-style: normal;
     font-size: 3rem;
     line-height: 3.8rem;
     letter-spacing: -0.02em;
     text-align: left;
+    color: white;
 }
 
 .vision-banner h4 i {
     font-weight: 500;
 }
 
+.whiteBar {
+    background-color: #101045;
+    width:300px;
+    height:10px;
+    margin-bottom:10px;
+}
+
+.what-we-do {
+    margin: 0;
+    padding: 2.5rem 25rem 2rem 10rem;
+    text-align:left;
+    height: 58vh;
+    background-color: #f1f6ff;
+    color:#101045;
+    display:flex;
+    flex-direction: column;
+    align-items:start;
+}
+
+.what-we-do h1 {
+    font-family: 'Poppins';
+    font-weight:500;
+    font-size: 3.5rem;
+    line-height: 4rem;
+    letter-spacing: 0.01rem;
+
+}
+
+
+.what-we-do p {
+    width:60%;
+    font-style:italic;
+    font-size:20px;
+}
+
 .past-disclaimer {
     text-align:left;
     padding-top:2rem;
+    background-color: white;
 }
 
 .past-disclaimer p {
@@ -60,28 +100,8 @@
     font-weight:600;
 }
 
-.what-we-do {
-    margin: 0;
-    padding: 5rem 25rem 2rem 10rem;
-    text-align:left;
-    height: 60vh;
-    /* background-image: url("src/assets/pattern.png"); */
-    /* background-color: #ffecd9; */
-    /* color:white; */
-}
 
-.what-we-do h1 {
-    font-family: "Univers", "Helvetica", "sans-serif";
-    font-style: bold;
-    font-size: 3.5rem;
-    line-height: 4rem;
-    letter-spacing: 0.01rem;
-    text-align: left;
-}
 
-.what-we-do p {
-    width:50%;
-}
 
 
 
@@ -92,6 +112,7 @@
     justify-content: center;
     align-items:start;
     /* border: 2px black solid; */
+    background-color: white;
 }
 
 .success-stories h4 {
@@ -110,8 +131,8 @@
 }
 
 .next-fund-title h4 {
-    font-family: "Univers", "Helvetica", "sans-serif";
-    font-size: 1.8rem;
+    font-family: 'Poppins';
+    font-size: 2rem;
     font-weight: 300;
 }
 
@@ -126,11 +147,11 @@
 
 .next-fund-list-wrapper {
     padding: 3rem 10rem;
-    background-color:#F0F0F0;
+    background-color:#f1f6ff;
 }
 
 .next-fund-list-wrapper h4 {
-    font-family: "Univers", "Helvetica", "sans-serif";
+    font-family: 'Poppins';
     font-size: 2rem;
     font-weight: 300;
     text-align:left;
@@ -141,7 +162,7 @@
 }
 
 .next-fund-list li {
-    font-family: "Univers", "Helvetica", "sans-serif";
+    font-family: 'Poppins';
     font-size: 1.5rem;
     font-weight: 300;
     text-align:left;
@@ -158,7 +179,7 @@
     text-align:left;
     border:1px rgba(0,0,56,255) solid;
     border-right: none;
-    background-color:#F0F0F0;
+    background-color:#f1f6ff;
     border-radius:0;
 }
 
@@ -168,12 +189,12 @@
     padding: 1.2rem 1rem 1rem 1rem;
     text-align:left;
     border:1px rgba(0,0,56,255) solid;
-    background-color:#F0F0F0;
+    background-color:#f1f6ff;
     border-radius:0;
 }
 
 .non-active-segment h3, .founders-segment h3 {
-    font-family: "Univers", "Helvetica", "sans-serif";
+    font-family: 'Poppins';
     font-size: 2rem;
     font-weight: 300;
     text-align:center;
@@ -186,7 +207,7 @@
 }
 
 .success-stories-footer h4 {
-    font-family: "Univers", "Helvetica", "sans-serif";
+    font-family:'Poppins';
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 2.8rem;
@@ -204,7 +225,7 @@
 
 .success-card-body {
     text-align:left;
-    font-family: Space Grotesk, sans-serif;
+    font-family: 'Poppins';
     /* background-color: #dfeef3; */
 }
 
@@ -228,14 +249,22 @@
     font-size:14px;
 }
 
-.vs-secondaries {
-    padding:10rem 10rem 5rem 10rem;
+
+.vs-secondaries-title {
+    padding: 1.2rem 0 1rem 0;
+    margin: 10rem 0 0 0;
+    color: white;
+    background-color:#101045;
 }
 
 .vs-secondaries-title h2 {
-    margin:0 0 6rem 0;
     font-size:48px;
     font-weight:500;
+}
+
+.vs-secondaries {
+    padding:4rem 10rem 5rem 10rem;
+    background-color: #f1f6ff;
 }
 
 .vs-secondaries p {
